[tool.poetry]
name = "snmp_ifstats_mqtt"
version = "0.1.4"
description = ""
authors = ["Henryk Plötz <henryk@ploetzli.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.6.1"
easysnmp = "^0.2.5"
PyYAML = "^6.0"
dynaconf = {version = "^3.1.9", extras = ["toml"]}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88

[tool.poetry.scripts]
snmp_ifstats_mqtt = "snmp_ifstats_mqtt:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
